examples/test/testpolicy5204.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5204
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key45: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value18
      podSelector:
        matchLabels:
          key33: value30
          key17: value6
          key27: value19
